Removed lightbulb added ninja

--- a/public/index.html
+++ b/public/index.html
@@ -44,10 +44,9 @@
   
   <div class="link">
     <img
-      src="/lightbulb.jpg">
+      src="/ninja2.jpg">
   
-    <a target="_blank" href="https://www.britannica.com/biography/Albert-Einstein">Albert-Einstein
-      — Britannica</a>
+    <a target="_blank" href="https://www.kravmaga.com/">Krav Maga - Israeli Self-Defense</a>
   </div>
   
 
