Started doing CSS

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+
+  <style>
+    body{
+      padding-top: 40px;
+      padding-bottom: 40px;
+    } 
+
+
+    </style>
 </head>
+
 <body>
   <div class="banner">
     <img src="Donna_Tubbs.jpg" alt="Tamara Ita headshot">
@@ -22,20 +34,19 @@
   
     <a href="https://www.linkedin.com/in/trgabrielita/" target="_blank">
       LinkedIn
-
     </a>
   </div>
   
   <div class="link">
     <img
-      src="/haiti-flag1.gif">
+      src="/haiti-flag1.gif" alt="haitian flag">
   
     <a target="_blank" href="https://www.haitiannomad.net/">Memorable Group Travel Trips
       — Haitian Nomad</a>
   </div>
   
   <div class="link">
-    <img src="/Coffee_unsplash.jpg">
+    <img src="/Coffee_unsplash.jpg" alt="coffee mug">
   
     <a target="_blank"
       href="https://dc.eater.com/maps/essential-coffee-shops-dc-virginia-best-latte">16 Must-Try Coffee Shops Around D.C.
@@ -43,8 +54,7 @@
   </div>
   
   <div class="link">
-    <img
-      src="/ninja2.jpg">
+    <img src="/ninja2.jpg" alt="ninja">
   
     <a target="_blank" href="https://www.kravmaga.com/">Krav Maga - Israeli Self-Defense</a>
   </div>
